exports[`prefer-array-from-async > invalid(1): async function foo() { const result = []; for await (const item of items) { result.push(await {a: item}.a); } } 1`] = `

  1 | async function foo() { const result = []; for await (const item of items) { result.push(await {a: item}.a); } }

`;

exports[`prefer-array-from-async > invalid(1): async function foo() { const result = []; for await (const item of items) { result.push(await {a: item}.a); } } 2`] = `

Message:
> 1 | async function foo() { const result = []; for await (const item of items) { result.push(await {a: item}.a); } }
    |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | async function foo() { const result = await Array.fromAsync(items, item => ({a: item}.a)); }

`;

exports[`prefer-array-from-async > invalid(1): const result = []; for (const path of [\"a\", \"b\"]) { result.push(await readFile(path)); } 1`] = `

  1 | const result = []; for (const path of ["a", "b"]) { result.push(await readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(1): const result = []; for (const path of [\"a\", \"b\"]) { result.push(await readFile(path)); } 2`] = `

Message:
> 1 | const result = []; for (const path of ["a", "b"]) { result.push(await readFile(path)); }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | const result = await Array.fromAsync(["a", "b"], path => readFile(path));

`;

exports[`prefer-array-from-async > invalid(1): const result = [];\nfor await (const element of iterable) {\n\tresult.push(element);\n} 1`] = `

  1 | const result = [];
  2 | for await (const element of iterable) {
  3 | 	result.push(element);
  4 | }

`;

exports[`prefer-array-from-async > invalid(1): const result = [];\nfor await (const element of iterable) {\n\tresult.push(element);\n} 2`] = `

Message:
  1 | const result = [];
> 2 | for await (const element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(element);
    | ^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | const result = await Array.fromAsync(iterable);

`;

exports[`prefer-array-from-async > invalid(1): export const result = []; for await (const element of iterable) { result.push(await element); } 1`] = `

  1 | export const result = []; for await (const element of iterable) { result.push(await element); }

`;

exports[`prefer-array-from-async > invalid(1): export const result = []; for await (const element of iterable) { result.push(await element); } 2`] = `

Message:
> 1 | export const result = []; for await (const element of iterable) { result.push(await element); }
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | export const result = await Array.fromAsync(iterable, element => element);

`;

exports[`prefer-array-from-async > invalid(1): let length; const result = []; for (const element of [\"a\"]) { result.push(await ({length} = element)); } 1`] = `

  1 | let length; const result = []; for (const element of ["a"]) { result.push(await ({length} = element)); }

`;

exports[`prefer-array-from-async > invalid(1): let length; const result = []; for (const element of [\"a\"]) { result.push(await ({length} = element)); } 2`] = `

Message:
> 1 | let length; const result = []; for (const element of ["a"]) { result.push(await ({length} = element)); }
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | let length; const result = await Array.fromAsync(["a"], element => ({length} = element));

`;

exports[`prefer-array-from-async > invalid(10): async function foo(paths: string) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: string) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(10): async function foo(paths: string) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: string) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: string) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(10): const result = [];\nfor await (const element of iterable) {\n\tresult.push(await (log(element), element));\n} 1`] = `

  1 | const result = [];
  2 | for await (const element of iterable) {
  3 | 	result.push(await (log(element), element));
  4 | }

`;

exports[`prefer-array-from-async > invalid(10): const result = [];\nfor await (const element of iterable) {\n\tresult.push(await (log(element), element));\n} 2`] = `

Message:
  1 | const result = [];
> 2 | for await (const element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(await (log(element), element));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | const result = await Array.fromAsync(iterable, element => (log(element), element));

`;

exports[`prefer-array-from-async > invalid(11): async function foo(paths: string[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: string[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(11): async function foo(paths: string[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: string[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: string[]) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(11): const result = [];\nfor await (const element of iterable)\n\tresult.push(element); 1`] = `

  1 | const result = [];
  2 | for await (const element of iterable)
  3 | 	result.push(element);

`;

exports[`prefer-array-from-async > invalid(11): const result = [];\nfor await (const element of iterable)\n\tresult.push(element); 2`] = `

Message:
  1 | const result = [];
> 2 | for await (const element of iterable)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(element);
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | const result = await Array.fromAsync(iterable);

`;

exports[`prefer-array-from-async > invalid(12): async function foo() {\n\tconst result = [];\n\tfor await (const element of iterable) {\n\t\tresult.push(await (element as string));\n\t}\n} 1`] = `

  1 | async function foo() {
  2 | 	const result = [];
  3 | 	for await (const element of iterable) {
  4 | 		result.push(await (element as string));
  5 | 	}
  6 | }

`;

exports[`prefer-array-from-async > invalid(12): async function foo() {\n\tconst result = [];\n\tfor await (const element of iterable) {\n\t\tresult.push(await (element as string));\n\t}\n} 2`] = `

Message:
  1 | async function foo() {
  2 | 	const result = [];
> 3 | 	for await (const element of iterable) {
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		result.push(await (element as string));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | 	}
    | ^^ Prefer \`Array.fromAsync()\` over array accumulation loops.
  6 | }

Output:
  1 | async function foo() {
  2 | 	const result = await Array.fromAsync(iterable, element => element as string);
  3 | }

`;

exports[`prefer-array-from-async > invalid(12): async function foo(paths: Array<string>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: Array<string>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(12): async function foo(paths: Array<string>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: Array<string>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: Array<string>) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(13): async function foo(paths: readonly string[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: readonly string[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(13): async function foo(paths: readonly string[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: readonly string[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: readonly string[]) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(13): const result = [];\n// Keep this comment.\nfor await (const element of iterable) {\n\tresult.push(element);\n} 1`] = `

  1 | const result = [];
  2 | // Keep this comment.
  3 | for await (const element of iterable) {
  4 | 	result.push(element);
  5 | }

`;

exports[`prefer-array-from-async > invalid(13): const result = [];\n// Keep this comment.\nfor await (const element of iterable) {\n\tresult.push(element);\n} 2`] = `

Message:
  1 | const result = [];
  2 | // Keep this comment.
> 3 | for await (const element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 	result.push(element);
    | ^^^^^^^^^^^^^^^^^^^^^^
> 5 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

`;

exports[`prefer-array-from-async > invalid(14): async function foo(paths: ReadonlyArray<string>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: ReadonlyArray<string>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(14): async function foo(paths: ReadonlyArray<string>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: ReadonlyArray<string>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: ReadonlyArray<string>) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(14): const result = [];\nfor await (const element of iterable) {\n\tresult.push(\n\t\t// Keep this comment.\n\t\telement,\n\t);\n} 1`] = `

  1 | const result = [];
  2 | for await (const element of iterable) {
  3 | 	result.push(
  4 | 		// Keep this comment.
  5 | 		element,
  6 | 	);
  7 | }

`;

exports[`prefer-array-from-async > invalid(14): const result = [];\nfor await (const element of iterable) {\n\tresult.push(\n\t\t// Keep this comment.\n\t\telement,\n\t);\n} 2`] = `

Message:
  1 | const result = [];
> 2 | for await (const element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(
    | ^^^^^^^^^^^^^
> 4 | 		// Keep this comment.
    | ^^^^^^^^^^^^^^^^^^^^^^^
> 5 | 		element,
    | ^^^^^^^^^^
> 6 | 	);
    | ^^^
> 7 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

`;

exports[`prefer-array-from-async > invalid(15): async function foo(paths: [string, number]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: [string, number]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(15): async function foo(paths: [string, number]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: [string, number]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: [string, number]) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(16): async function foo(paths: readonly [string, number?]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: readonly [string, number?]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(16): async function foo(paths: readonly [string, number?]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: readonly [string, number?]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: readonly [string, number?]) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(17): async function foo(paths: (string | number | boolean | bigint | symbol | null | undefined)[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: (string | number | boolean | bigint | symbol | null | undefined)[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(17): async function foo(paths: (string | number | boolean | bigint | symbol | null | undefined)[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: (string | number | boolean | bigint | symbol | null | undefined)[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: (string | number | boolean | bigint | symbol | null | undefined)[]) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(18): async function foo(paths: string[] | number[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: string[] | number[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(18): async function foo(paths: string[] | number[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: string[] | number[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: string[] | number[]) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(19): async function foo(paths: (\"a\" | 1 | true)[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: ("a" | 1 | true)[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(19): async function foo(paths: (\"a\" | 1 | true)[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: ("a" | 1 | true)[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: ("a" | 1 | true)[]) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(2): const paths = [\"a\", \"b\"]; const result = []; for (const path of paths) { result.push(await readFile(path)); } 1`] = `

  1 | const paths = ["a", "b"]; const result = []; for (const path of paths) { result.push(await readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(2): const paths = [\"a\", \"b\"]; const result = []; for (const path of paths) { result.push(await readFile(path)); } 2`] = `

Message:
> 1 | const paths = ["a", "b"]; const result = []; for (const path of paths) { result.push(await readFile(path)); }
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | const paths = ["a", "b"]; const result = await Array.fromAsync(paths, path => readFile(path));

`;

exports[`prefer-array-from-async > invalid(2): let length; const result = []; for await (const element of iterable) { result.push(await ({length} = element)); } 1`] = `

  1 | let length; const result = []; for await (const element of iterable) { result.push(await ({length} = element)); }

`;

exports[`prefer-array-from-async > invalid(2): let length; const result = []; for await (const element of iterable) { result.push(await ({length} = element)); } 2`] = `

Message:
> 1 | let length; const result = []; for await (const element of iterable) { result.push(await ({length} = element)); }
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | let length; const result = await Array.fromAsync(iterable, element => ({length} = element));

`;

exports[`prefer-array-from-async > invalid(2): let result = [];\nfor await (const element of iterable) {\n\tresult.push(element);\n} 1`] = `

  1 | let result = [];
  2 | for await (const element of iterable) {
  3 | 	result.push(element);
  4 | }

`;

exports[`prefer-array-from-async > invalid(2): let result = [];\nfor await (const element of iterable) {\n\tresult.push(element);\n} 2`] = `

Message:
  1 | let result = [];
> 2 | for await (const element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(element);
    | ^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | let result = await Array.fromAsync(iterable);

`;

exports[`prefer-array-from-async > invalid(20): async function foo(paths: \`file-\${string}\`) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: \`file-\${string}\`) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(20): async function foo(paths: \`file-\${string}\`) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: \`file-\${string}\`) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: \`file-\${string}\`) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(21): async function foo(paths: \`file-\${string}\`[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: \`file-\${string}\`[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(21): async function foo(paths: \`file-\${string}\`[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: \`file-\${string}\`[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: \`file-\${string}\`[]) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(22): async function foo<T extends string>(paths: Uppercase<T>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo<T extends string>(paths: Uppercase<T>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(22): async function foo<T extends string>(paths: Uppercase<T>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo<T extends string>(paths: Uppercase<T>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo<T extends string>(paths: Uppercase<T>) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(23): async function foo<T extends string>(paths: Uppercase<T>[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo<T extends string>(paths: Uppercase<T>[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(23): async function foo<T extends string>(paths: Uppercase<T>[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo<T extends string>(paths: Uppercase<T>[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo<T extends string>(paths: Uppercase<T>[]) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(24): async function foo<T extends string>(paths: T) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo<T extends string>(paths: T) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(24): async function foo<T extends string>(paths: T) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo<T extends string>(paths: T) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo<T extends string>(paths: T) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(25): async function foo<T extends string>(paths: Array<T>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo<T extends string>(paths: Array<T>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(25): async function foo<T extends string>(paths: Array<T>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo<T extends string>(paths: Array<T>) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo<T extends string>(paths: Array<T>) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(26): type Path = string & {readonly __path: unique symbol}; async function foo(paths: Path[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | type Path = string & {readonly __path: unique symbol}; async function foo(paths: Path[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(26): type Path = string & {readonly __path: unique symbol}; async function foo(paths: Path[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | type Path = string & {readonly __path: unique symbol}; async function foo(paths: Path[]) { const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | type Path = string & {readonly __path: unique symbol}; async function foo(paths: Path[]) { const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(27): enum Value {text = \"text\", number = 1} async function foo(values: Value[]) { const result = []; for (const value of values) { result.push(await transform(value)); } } 1`] = `

Filename: file.ts

  1 | enum Value {text = "text", number = 1} async function foo(values: Value[]) { const result = []; for (const value of values) { result.push(await transform(value)); } }

`;

exports[`prefer-array-from-async > invalid(27): enum Value {text = \"text\", number = 1} async function foo(values: Value[]) { const result = []; for (const value of values) { result.push(await transform(value)); } } 2`] = `

Message:
> 1 | enum Value {text = "text", number = 1} async function foo(values: Value[]) { const result = []; for (const value of values) { result.push(await transform(value)); } }
    |                                                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | enum Value {text = "text", number = 1} async function foo(values: Value[]) { const result = await Array.fromAsync(values, value => transform(value)); }

`;

exports[`prefer-array-from-async > invalid(28): async function foo(paths: string) { const alias = paths; const result = []; for (const path of alias) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: string) { const alias = paths; const result = []; for (const path of alias) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(28): async function foo(paths: string) { const alias = paths; const result = []; for (const path of alias) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: string) { const alias = paths; const result = []; for (const path of alias) { result.push(await readFile(path)); } }
    |                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: string) { const alias = paths; const result = await Array.fromAsync(alias, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(29): declare const key: unique symbol; async function foo(keys: (typeof key)[]) { const result = []; for (const key of keys) { result.push(await transform(key)); } } 1`] = `

Filename: file.ts

  1 | declare const key: unique symbol; async function foo(keys: (typeof key)[]) { const result = []; for (const key of keys) { result.push(await transform(key)); } }

`;

exports[`prefer-array-from-async > invalid(29): declare const key: unique symbol; async function foo(keys: (typeof key)[]) { const result = []; for (const key of keys) { result.push(await transform(key)); } } 2`] = `

Message:
> 1 | declare const key: unique symbol; async function foo(keys: (typeof key)[]) { const result = []; for (const key of keys) { result.push(await transform(key)); } }
    |                                                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | declare const key: unique symbol; async function foo(keys: (typeof key)[]) { const result = await Array.fromAsync(keys, key => transform(key)); }

`;

exports[`prefer-array-from-async > invalid(3): const paths = \"ab\"; const result = []; for (const path of paths) { result.push(await readFile(path)); } 1`] = `

  1 | const paths = "ab"; const result = []; for (const path of paths) { result.push(await readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(3): const paths = \"ab\"; const result = []; for (const path of paths) { result.push(await readFile(path)); } 2`] = `

Message:
> 1 | const paths = "ab"; const result = []; for (const path of paths) { result.push(await readFile(path)); }
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | const paths = "ab"; const result = await Array.fromAsync(paths, path => readFile(path));

`;

exports[`prefer-array-from-async > invalid(3): const result = [];\nfor await (let element of iterable) {\n\tresult.push(element);\n} 1`] = `

  1 | const result = [];
  2 | for await (let element of iterable) {
  3 | 	result.push(element);
  4 | }

`;

exports[`prefer-array-from-async > invalid(3): const result = [];\nfor await (let element of iterable) {\n\tresult.push(element);\n} 2`] = `

Message:
  1 | const result = [];
> 2 | for await (let element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(element);
    | ^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | const result = await Array.fromAsync(iterable);

`;

exports[`prefer-array-from-async > invalid(30): async function foo() { const result = []; for (const path of [(\"a\" as string)]) { result.push(await readFile(path)); } } 1`] = `

  1 | async function foo() { const result = []; for (const path of [("a" as string)]) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(30): async function foo() { const result = []; for (const path of [(\"a\" as string)]) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo() { const result = []; for (const path of [("a" as string)]) { result.push(await readFile(path)); } }
    |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo() { const result = await Array.fromAsync([("a" as string)], path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(31): async function foo() { const paths = [\"a\"] as const; const result = []; for (const path of paths) { result.push(await readFile(path)); } } 1`] = `

  1 | async function foo() { const paths = ["a"] as const; const result = []; for (const path of paths) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(31): async function foo() { const paths = [\"a\"] as const; const result = []; for (const path of paths) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo() { const paths = ["a"] as const; const result = []; for (const path of paths) { result.push(await readFile(path)); } }
    |                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo() { const paths = ["a"] as const; const result = await Array.fromAsync(paths, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(32): async function foo(paths: string[] | undefined) { const result = []; for (const path of paths!) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: string[] | undefined) { const result = []; for (const path of paths!) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(32): async function foo(paths: string[] | undefined) { const result = []; for (const path of paths!) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: string[] | undefined) { const result = []; for (const path of paths!) { result.push(await readFile(path)); } }
    |                                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: string[] | undefined) { const result = await Array.fromAsync(paths!, path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(33): async function foo(paths: string[]) { const result = []; for (const path of (paths satisfies readonly string[])) { result.push(await readFile(path)); } } 1`] = `

Filename: file.ts

  1 | async function foo(paths: string[]) { const result = []; for (const path of (paths satisfies readonly string[])) { result.push(await readFile(path)); } }

`;

exports[`prefer-array-from-async > invalid(33): async function foo(paths: string[]) { const result = []; for (const path of (paths satisfies readonly string[])) { result.push(await readFile(path)); } } 2`] = `

Message:
> 1 | async function foo(paths: string[]) { const result = []; for (const path of (paths satisfies readonly string[])) { result.push(await readFile(path)); } }
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo(paths: string[]) { const result = await Array.fromAsync((paths satisfies readonly string[]), path => readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(34): const result = []; for (const path of [, \"a\"]) { result.push(await readFile(path)); } 1`] = `

  1 | const result = []; for (const path of [, "a"]) { result.push(await readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(34): const result = []; for (const path of [, \"a\"]) { result.push(await readFile(path)); } 2`] = `

Message:
> 1 | const result = []; for (const path of [, "a"]) { result.push(await readFile(path)); }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | const result = await Array.fromAsync([, "a"], path => readFile(path));

`;

exports[`prefer-array-from-async > invalid(35): const result = []; for (const path of [\"a\"]) { result.push(await readFile(/* keep */ path)); } 1`] = `

  1 | const result = []; for (const path of ["a"]) { result.push(await readFile(/* keep */ path)); }

`;

exports[`prefer-array-from-async > invalid(35): const result = []; for (const path of [\"a\"]) { result.push(await readFile(/* keep */ path)); } 2`] = `

Message:
> 1 | const result = []; for (const path of ["a"]) { result.push(await readFile(/* keep */ path)); }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

`;

exports[`prefer-array-from-async > invalid(36): const result = []; /* keep */ for (const path of [\"a\"]) { result.push(await readFile(path)); } 1`] = `

  1 | const result = []; /* keep */ for (const path of ["a"]) { result.push(await readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(36): const result = []; /* keep */ for (const path of [\"a\"]) { result.push(await readFile(path)); } 2`] = `

Message:
> 1 | const result = []; /* keep */ for (const path of ["a"]) { result.push(await readFile(path)); }
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

`;

exports[`prefer-array-from-async > invalid(4): const paths = \"ab\"; const alias = paths; const result = []; for (const path of alias) { result.push(await readFile(path)); } 1`] = `

  1 | const paths = "ab"; const alias = paths; const result = []; for (const path of alias) { result.push(await readFile(path)); }

`;

exports[`prefer-array-from-async > invalid(4): const paths = \"ab\"; const alias = paths; const result = []; for (const path of alias) { result.push(await readFile(path)); } 2`] = `

Message:
> 1 | const paths = "ab"; const alias = paths; const result = []; for (const path of alias) { result.push(await readFile(path)); }
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | const paths = "ab"; const alias = paths; const result = await Array.fromAsync(alias, path => readFile(path));

`;

exports[`prefer-array-from-async > invalid(4): const result = [];\nfor await (const element of (iterable)) {\n\tresult.push(element);\n} 1`] = `

  1 | const result = [];
  2 | for await (const element of (iterable)) {
  3 | 	result.push(element);
  4 | }

`;

exports[`prefer-array-from-async > invalid(4): const result = [];\nfor await (const element of (iterable)) {\n\tresult.push(element);\n} 2`] = `

Message:
  1 | const result = [];
> 2 | for await (const element of (iterable)) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(element);
    | ^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | const result = await Array.fromAsync((iterable));

`;

exports[`prefer-array-from-async > invalid(5): const path = \"a\"; const result = []; for (const value of [path]) { result.push(await readFile(value)); } 1`] = `

  1 | const path = "a"; const result = []; for (const value of [path]) { result.push(await readFile(value)); }

`;

exports[`prefer-array-from-async > invalid(5): const path = \"a\"; const result = []; for (const value of [path]) { result.push(await readFile(value)); } 2`] = `

Message:
> 1 | const path = "a"; const result = []; for (const value of [path]) { result.push(await readFile(value)); }
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | const path = "a"; const result = await Array.fromAsync([path], value => readFile(value));

`;

exports[`prefer-array-from-async > invalid(5): const result = [];\nfor await (const element of iterable) {\n\tresult.push(await transform(element));\n} 1`] = `

  1 | const result = [];
  2 | for await (const element of iterable) {
  3 | 	result.push(await transform(element));
  4 | }

`;

exports[`prefer-array-from-async > invalid(5): const result = [];\nfor await (const element of iterable) {\n\tresult.push(await transform(element));\n} 2`] = `

Message:
  1 | const result = [];
> 2 | for await (const element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(await transform(element));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | const result = await Array.fromAsync(iterable, element => transform(element));

`;

exports[`prefer-array-from-async > invalid(6): const result = [];\nfor await (let element of iterable) {\n\tresult.push(await transform(element++));\n} 1`] = `

  1 | const result = [];
  2 | for await (let element of iterable) {
  3 | 	result.push(await transform(element++));
  4 | }

`;

exports[`prefer-array-from-async > invalid(6): const result = [];\nfor await (let element of iterable) {\n\tresult.push(await transform(element++));\n} 2`] = `

Message:
  1 | const result = [];
> 2 | for await (let element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(await transform(element++));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | const result = await Array.fromAsync(iterable, element => transform(element++));

`;

exports[`prefer-array-from-async > invalid(6): let result = []; for (let value of [1, true, null, undefined, 1n]) { result.push(await transform(value)); } 1`] = `

  1 | let result = []; for (let value of [1, true, null, undefined, 1n]) { result.push(await transform(value)); }

`;

exports[`prefer-array-from-async > invalid(6): let result = []; for (let value of [1, true, null, undefined, 1n]) { result.push(await transform(value)); } 2`] = `

Message:
> 1 | let result = []; for (let value of [1, true, null, undefined, 1n]) { result.push(await transform(value)); }
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | let result = await Array.fromAsync([1, true, null, undefined, 1n], value => transform(value));

`;

exports[`prefer-array-from-async > invalid(7): const result = []; for (const path of (([\"a\"]))) result.push(await reader.readFile(path)); 1`] = `

  1 | const result = []; for (const path of ((["a"]))) result.push(await reader.readFile(path));

`;

exports[`prefer-array-from-async > invalid(7): const result = []; for (const path of (([\"a\"]))) result.push(await reader.readFile(path)); 2`] = `

Message:
> 1 | const result = []; for (const path of ((["a"]))) result.push(await reader.readFile(path));
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | const result = await Array.fromAsync(((["a"])), path => reader.readFile(path));

`;

exports[`prefer-array-from-async > invalid(7): const result = [];\nfor await (const element of iterable) {\n\tresult.push(await element);\n} 1`] = `

  1 | const result = [];
  2 | for await (const element of iterable) {
  3 | 	result.push(await element);
  4 | }

`;

exports[`prefer-array-from-async > invalid(7): const result = [];\nfor await (const element of iterable) {\n\tresult.push(await element);\n} 2`] = `

Message:
  1 | const result = [];
> 2 | for await (const element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(await element);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | const result = await Array.fromAsync(iterable, element => element);

`;

exports[`prefer-array-from-async > invalid(8): const result = []; for (const value of \"abc\") { result.push(await ({value})); } 1`] = `

  1 | const result = []; for (const value of "abc") { result.push(await ({value})); }

`;

exports[`prefer-array-from-async > invalid(8): const result = []; for (const value of \"abc\") { result.push(await ({value})); } 2`] = `

Message:
> 1 | const result = []; for (const value of "abc") { result.push(await ({value})); }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | const result = await Array.fromAsync("abc", value => ({value}));

`;

exports[`prefer-array-from-async > invalid(8): const result: string[] = [];\nfor await (const element of iterable) {\n\tresult.push(element);\n} 1`] = `

  1 | const result: string[] = [];
  2 | for await (const element of iterable) {
  3 | 	result.push(element);
  4 | }

`;

exports[`prefer-array-from-async > invalid(8): const result: string[] = [];\nfor await (const element of iterable) {\n\tresult.push(element);\n} 2`] = `

Message:
  1 | const result: string[] = [];
> 2 | for await (const element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(element);
    | ^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | const result: string[] = await Array.fromAsync(iterable);

`;

exports[`prefer-array-from-async > invalid(9): async function foo() { const result: string[] = []; for (const path of ([\"a\"] as const)) { result.push(await (readFile(path) as string)); } } 1`] = `

  1 | async function foo() { const result: string[] = []; for (const path of (["a"] as const)) { result.push(await (readFile(path) as string)); } }

`;

exports[`prefer-array-from-async > invalid(9): async function foo() { const result: string[] = []; for (const path of ([\"a\"] as const)) { result.push(await (readFile(path) as string)); } } 2`] = `

Message:
> 1 | async function foo() { const result: string[] = []; for (const path of (["a"] as const)) { result.push(await (readFile(path) as string)); } }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Suggestion 1/1: Replace the loop with \`Array.fromAsync()\`.:
  1 | async function foo() { const result: string[] = await Array.fromAsync((["a"] as const), path => readFile(path) as string); }

`;

exports[`prefer-array-from-async > invalid(9): const result = [];\nfor await (const element of iterable) {\n\tresult.push(await ({value: element}));\n} 1`] = `

  1 | const result = [];
  2 | for await (const element of iterable) {
  3 | 	result.push(await ({value: element}));
  4 | }

`;

exports[`prefer-array-from-async > invalid(9): const result = [];\nfor await (const element of iterable) {\n\tresult.push(await ({value: element}));\n} 2`] = `

Message:
  1 | const result = [];
> 2 | for await (const element of iterable) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	result.push(await ({value: element}));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Prefer \`Array.fromAsync()\` over array accumulation loops.

Output:
  1 | const result = await Array.fromAsync(iterable, element => ({value: element}));

`;
